--- a/Personal_website/index.html
+++ b/Personal_website/index.html
@@ -14,7 +14,7 @@
   <header>
     <div class="header-bar">
       <div class="header-block1">
-        <img class="logo" src="images/logo.png" class="logo"> 
+        <img class="logo" src="./images/logo.png" class="logo"> 
       </div>
       <nav class="header-block2">
         <ul>
@@ -78,7 +78,7 @@
       <div class="block1-column2">
         <template>
             <h2>Image</h2>
-            <img src="profile.jpg" width="1390", height ="2084"/>
+            <img src="./profile.jpg" width="1390", height ="2084"/>
         </template>
       </div>
     </div>
@@ -96,5 +96,5 @@
 
   </footer>
 </body>
-<script src="app.js"></script>
+<script src="./app.js"></script>
 </html>
