--- a/Personal_website/index.html
+++ b/Personal_website/index.html
@@ -18,8 +18,9 @@
       </div>
       <nav class="header-block2">
         <ul>
-          <button class="button-about">Pretty</button>
-          <button class="button-experience">Buttons</button>
+          <button class="button-about" onclick="getEm()">Hi Rick</button>
+          <button class="button-experience" onclick="window.location.href='http://github.com/DYLPICKLEROHAN';"
+          >GitHub</button>
           <!--<button class="button-contact">Contact Me</button>
         -->
         </ul>
